// Copyright 2023 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package swarming.bq.tasks;

option go_package = "go.chromium.org/luci/swarming/server/bq/taskspb;taskspb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message ExportInterval {
  string operation_id = 1;
  google.protobuf.Timestamp start = 2;
  google.protobuf.Duration duration = 3;
  string cloud_project = 4;
  string dataset = 5;
  string table_name = 6;
}
